force-app/main/default/objects/KimbleOne__ResourcedActivity__c/KimbleOne__ResourcedActivity__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Resourced Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resourced Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>