force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ActivatedTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivatedTime__c</fullName>
    <label>Activated Time</label>
    <type>DateTime</type>
</CustomField>