force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ActualExpenseCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualExpenseCost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Expense Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>