force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ActualExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualExpenseRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Expense Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>