force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ActualExpenseRevenueToCapFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualExpenseRevenueToCapFactor__c</fullName>
    <formula>IF (KimbleOne__InvoicingCurrencyExpenseRevenueCap__c &gt; 0,
 KimbleOne__InvoicingCurrencyActualExpenseRevenue__c / KimbleOne__InvoicingCurrencyExpenseRevenueCap__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Expense Revenue To Cap Factor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>