force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ActualUsageRevenueToCapFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualUsageRevenueToCapFactor__c</fullName>
    <formula>IF (KimbleOne__InvoicingCurrencyUsageRevenueCap__c &gt; 0, 
KimbleOne__InvoicingCurrencyActualUsageRevenue__c / KimbleOne__InvoicingCurrencyUsageRevenueCap__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Usage Revenue To Cap Factor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>