force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__AllowModelAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowModelAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Model Assignments</label>
    <type>Checkbox</type>
</CustomField>