force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__AllowNewExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowNewExpenseItems__c</fullName>
    <formula>IF ( 
OR(KimbleOne__ResourcedActivityType__r.KimbleOne__Enum__c != &apos;DeliveryElement&apos;, KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__c == null),
true, 
KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__r.KimbleOne__AllowNewExpenseItems__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow New Expense Items</label>
    <type>Checkbox</type>
</CustomField>