force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__AllowNewTasks__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowNewTasks__c</fullName>
    <formula>IF(
OR(KimbleOne__ResourcedActivityType__r.KimbleOne__Enum__c != &apos;DeliveryElement&apos;, KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__c == null, KimbleOne__PlanType__r.KimbleOne__Enum__c == &apos;No Plan&apos;),
true, 
KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__r.KimbleOne__AllowNewTasks__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow New Tasks</label>
    <type>Checkbox</type>
</CustomField>