force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__AllowNewTimeAdjustments__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowNewTimeAdjustments__c</fullName>
    <formula>IF ( 
OR(KimbleOne__ResourcedActivityType__r.KimbleOne__Enum__c != &apos;DeliveryElement&apos;, KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__c == null),
true, 
KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__r.KimbleOne__AllowNewTimeAdjustments__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow New Time Adjustments</label>
    <type>Checkbox</type>
</CustomField>