force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__CalendarShowAs__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CalendarShowAs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar Show As</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>CalendarShowAs</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resourced Activities (Calendar Show As)</relationshipLabel>
    <relationshipName>Resourced_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>