force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__CanSelfForecast__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanSelfForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether the user can assign themselves to this Activity for a future date, e.g. holiday</inlineHelpText>
    <label>Can Self Assign?</label>
    <type>Checkbox</type>
</CustomField>