force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__Code__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Code__c</fullName>
    <label>Activity Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>