force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__DefaultProbabilityCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultProbabilityCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Probability Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ForecastStatusProbabilityCode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resourced Activities (Default Probability Code)</relationshipLabel>
    <relationshipName>ResourcedActivitiesDefaultProbCode</relationshipName>
    <type>Lookup</type>
</CustomField>