force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__DefaultUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultUsage__c</fullName>
    <label>Z_Obsolete - Default Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>