force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__DisableAssignmentRollups__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisableAssignmentRollups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Assignment Rollups</label>
    <type>Checkbox</type>
</CustomField>