force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ExpenseRevenueCap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseRevenueCap__c</fullName>
    <label>Expenses Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>