force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ForecastExpenseCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastExpenseCost__c</fullName>
    <label>Forecast Expense Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>