force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ForecastExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastExpenseRevenue__c</fullName>
    <label>Forecast Expense Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>