force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ForecastP3Usage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastP3Usage__c</fullName>
    <label>Forecast P3 Usage</label>
    <summarizedField>KimbleOne__ActivityAssignment__c.KimbleOne__ForecastP3Usage__c</summarizedField>
    <summaryFilterItems>
        <field>KimbleOne__ActivityAssignment__c.KimbleOne__IncludeInRollUp__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>KimbleOne__ActivityAssignment__c.KimbleOne__ResourcedActivity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>