force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ForecastRemainingExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRemainingExpenseRevenue__c</fullName>
    <label>Forecast Remaining Expense Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>