force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ForecastUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Units</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activities (Forecast Units)</relationshipLabel>
    <relationshipName>ResourcedActivities</relationshipName>
    <type>Lookup</type>
</CustomField>