force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__FullName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FullName__c</fullName>
    <formula>CASE(KimbleOne__ResourcedActivityType__r.KimbleOne__Enum__c ,  &apos;DeliveryElement&apos;,KimbleOne__DeliveryElement__r.KimbleOne__DeliveryGroup__r.KimbleOne__Account__r.Name &amp; &quot;-&quot; &amp; Name,&apos;SalesOpportunity&apos;,  KimbleOne__Proposal__r.KimbleOne__Account__r.Name &amp; &quot;-&quot; &amp; Name,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FullName</label>
    <type>Text</type>
</CustomField>