force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__GroupByField__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__GroupByField__c</fullName>
    <label>Group By Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>