force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__HasTaskStartEndTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasTaskStartEndTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks Have Start And End Times</label>
    <type>Checkbox</type>
</CustomField>