force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__IncludeInResourceAssignmentSummary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeInResourceAssignmentSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Resource Assignment Summary</label>
    <type>Checkbox</type>
</CustomField>