force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCcyRemainingExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCcyRemainingExpenseRevenue__c</fullName>
    <label>InvoicingCcyRemainingExpenseRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>