force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCurrencyActualExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyActualExpenseRevenue__c</fullName>
    <label>Actual Expense Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>