force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCurrencyActualUsageRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyActualUsageRevenue__c</fullName>
    <label>Actual Usage Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>