force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCurrencyExpenseRevenueCap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyExpenseRevenueCap__c</fullName>
    <label>Invoicing Currency Expense Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>