force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCurrencyForecastExpenseRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyForecastExpenseRevenue__c</fullName>
    <label>InvoicingCurrencyForecastExpenseRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>