force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCurrencyForecastRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyForecastRevenue__c</fullName>
    <label>Invoicing Currency Forecast Revenue</label>
    <summarizedField>KimbleOne__ActivityAssignment__c.KimbleOne__InvoicingCurrencyForecastRevenue__c</summarizedField>
    <summaryFilterItems>
        <field>KimbleOne__ActivityAssignment__c.KimbleOne__IncludeInRollUp__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>KimbleOne__ActivityAssignment__c.KimbleOne__ResourcedActivity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>