force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyIsoCode__c</fullName>
    <label>Invoicing Currency Iso Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>