force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingCurrencyUsageRevenueCap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyUsageRevenueCap__c</fullName>
    <label>Invoicing Currency Usage Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>