force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__InvoicingUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Units</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activities (Invoicing Units)</relationshipLabel>
    <relationshipName>ResourcedActivitiesInvoicing</relationshipName>
    <type>Lookup</type>
</CustomField>