force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__IsTimeUnpaid__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsTimeUnpaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Time Unpaid</label>
    <type>Checkbox</type>
</CustomField>