force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__IsTimeUntracked__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsTimeUntracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Is Time Untracked</label>
    <type>Checkbox</type>
</CustomField>