force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__IsTOIL__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsTOIL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Time Off In Lieu</label>
    <type>Checkbox</type>
</CustomField>