force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__IsUnavailable__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsUnavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Removed the resource from delivery and sales assignments for the period of unavailability. Shows as a grey box in the resource assignments screen.</inlineHelpText>
    <label>Is Unavailable</label>
    <type>Checkbox</type>
</CustomField>