force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__Location__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>KimbleOne__Location__c</referenceTo>
    <relationshipLabel>Resourced Activities</relationshipLabel>
    <relationshipName>ResourcedActivities</relationshipName>
    <type>Lookup</type>
</CustomField>