force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__MaximumToilAccrual__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MaximumToilAccrual__c</fullName>
    <label>Maximum TOIL Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>