force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__MinimumToilAccrual__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MinimumToilAccrual__c</fullName>
    <label>Minimum TOIL Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>