force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__PlanType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>PlanType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resourced Activities (Plan Type)</relationshipLabel>
    <relationshipName>ResourcedActivitiesPlanType</relationshipName>
    <type>Lookup</type>
</CustomField>