force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__SelfForecastApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SelfForecastApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether approval is required if the user assigns themselves to this activity.</inlineHelpText>
    <label>Requires Approval?</label>
    <type>Checkbox</type>
</CustomField>