force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__ShowUsageAsHoursAndMins__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowUsageAsHoursAndMins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Usage As Hours And Mins</label>
    <type>Checkbox</type>
</CustomField>