force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__TimeEntryRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeEntryRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Entry Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TimeEntryRule</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resourced Activities (Time Entry Rule)</relationshipLabel>
    <relationshipName>ResourcedActivityTimeEntryRules</relationshipName>
    <type>Lookup</type>
</CustomField>