force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__TimePatternRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePatternRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Pattern Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TimePatternRule</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resourced Activities (Time Pattern Rule)</relationshipLabel>
    <relationshipName>ResourcedActivitiesTimePatternRule</relationshipName>
    <type>Lookup</type>
</CustomField>